--- a/I would never send my kids to school我永远不会送我的孩子去学校/00.Content目录.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/00.Content目录.md
@@ -1,83 +1,83 @@
 - [1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction)
-- [前言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我再也不会把孩子送去学校/01.Introduction前言.md)
+- [前言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我再也不会把孩子送去学校/01.Introduction前言.html)
   - [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
-  - [学校教育的失败](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%89%8D%E8%A8%80)
+  - [学校教育的失败](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%89%8D%E8%A8%80)
   - [1.2Scrapping the school system](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
-  - [废除学校制度](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%BA%9F%E9%99%A4%E5%AD%A6%E6%A0%A1%E5%88%B6%E5%BA%A6)
+  - [废除学校制度](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%BA%9F%E9%99%A4%E5%AD%A6%E6%A0%A1%E5%88%B6%E5%BA%A6)
   - [1.3Brain-based reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
-  - [基于大脑的改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%9F%BA%E4%BA%8E%E5%A4%A7%E8%84%91%E7%9A%84%E6%94%B9%E9%9D%A9)
+  - [基于大脑的改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%9F%BA%E4%BA%8E%E5%A4%A7%E8%84%91%E7%9A%84%E6%94%B9%E9%9D%A9)
   - [1.4Love for children](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
-  - [对孩子的爱](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AF%B9%E5%AD%A9%E5%AD%90%E7%9A%84%E7%88%B1)
+  - [对孩子的爱](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AF%B9%E5%AD%A9%E5%AD%90%E7%9A%84%E7%88%B1)
   - [1.5Executive Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
-  - [执行概要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E6%89%A7%E8%A1%8C%E6%91%98%E8%A6%81)
+  - [执行概要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E6%89%A7%E8%A1%8C%E6%91%98%E8%A6%81)
   - [1.6Kids are not adults in minature](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
-  - [孩子不是微型的成年人](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E5%BE%AE%E5%9E%8B%E7%9A%84%E6%88%90%E5%B9%B4%E4%BA%BA)
+  - [孩子不是微型的成年人](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E5%BE%AE%E5%9E%8B%E7%9A%84%E6%88%90%E5%B9%B4%E4%BA%BA)
   - [1.7Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
-  - [学习基本定律](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AD%A6%E4%B9%A0%E5%9F%BA%E6%9C%AC%E5%AE%9A%E5%BE%8B)
+  - [学习基本定律](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A6%E4%B9%A0%E5%9F%BA%E6%9C%AC%E5%AE%9A%E5%BE%8B)
   - [1.8Message to our future selves](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
-  - [给我们未来的自己的信息](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E7%BB%99%E6%88%91%E4%BB%AC%E6%9C%AA%E6%9D%A5%E7%9A%84%E8%87%AA%E5%B7%B1%E7%9A%84%E4%BF%A1%E6%81%AF)
+  - [给我们未来的自己的信息](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E7%BB%99%E6%88%91%E4%BB%AC%E6%9C%AA%E6%9D%A5%E7%9A%84%E8%87%AA%E5%B7%B1%E7%9A%84%E4%BF%A1%E6%81%AF)
   - [1.9Dangers of early instruction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
-  - [早期教育的危险](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E6%97%A9%E6%9C%9F%E6%95%99%E8%82%B2%E7%9A%84%E5%8D%B1%E9%99%A9)
+  - [早期教育的危险](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E6%97%A9%E6%9C%9F%E6%95%99%E8%82%B2%E7%9A%84%E5%8D%B1%E9%99%A9)
   - [1.10Futility of cramming](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
-  - [徒劳的死记硬背](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%BE%92%E5%8A%B3%E7%9A%84%E6%AD%BB%E8%AE%B0%E7%A1%AC%E8%83%8C)
+  - [徒劳的死记硬背](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%BE%92%E5%8A%B3%E7%9A%84%E6%AD%BB%E8%AE%B0%E7%A1%AC%E8%83%8C)
   - [1.11Learning skill impotence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
-  - [学习能力的丧失](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B%E4%B8%A7%E5%A4%B1)
+  - [学习能力的丧失](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B%E4%B8%A7%E5%A4%B1)
   - [1.12Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
-  - [教育大改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
+  - [教育大改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
   - [1.13When school is a blessing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
-  - [何时学校的一种眷顾](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E4%BD%95%E6%97%B6%E5%AD%A6%E6%A0%A1%E6%98%AF%E4%B8%80%E7%A7%8D%E7%9C%B7%E9%A1%BE)
+  - [何时学校的一种眷顾](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E4%BD%95%E6%97%B6%E5%AD%A6%E6%A0%A1%E6%98%AF%E4%B8%80%E7%A7%8D%E7%9C%B7%E9%A1%BE)
   - [1.14The Optimization Error](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
-  - [优化错误](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E4%BC%98%E5%8C%96%E9%94%99%E8%AF%AF)
+  - [优化错误](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E4%BC%98%E5%8C%96%E9%94%99%E8%AF%AF)
   - [1.15Fostering diversity](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
-  - [培养多样性](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%9F%B9%E5%85%BB%E5%A4%9A%E6%A0%B7%E6%80%A7)
+  - [培养多样性](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%9F%B9%E5%85%BB%E5%A4%9A%E6%A0%B7%E6%80%A7)
   - [1.16Death of knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
-  - [知识的消亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E7%9F%A5%E8%AF%86%E7%9A%84%E6%B6%88%E4%BA%A1)
+  - [知识的消亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E7%9F%A5%E8%AF%86%E7%9A%84%E6%B6%88%E4%BA%A1)
   - [1.17Prediction: Death of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
-  - [预言：学校的死亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.md#%E9%A2%84%E8%A8%80%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E7%9A%84%E6%B6%88%E4%BA%A1)
+  - [预言：学校的死亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E9%A2%84%E8%A8%80%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E7%9A%84%E6%B6%88%E4%BA%A1)
 - [2Motto](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
-- [箴言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/02.Motto%E7%AE%B4%E8%A8%80.md)
+- [箴言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/02.Motto%E7%AE%B4%E8%A8%80.html)
 - [3Brain science](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
-- [脑科学](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/03.Brain%20science%E8%84%91%E7%A7%91%E5%AD%A6.md)
+- [脑科学](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/03.Brain%20science%E8%84%91%E7%A7%91%E5%AD%A6.html)
 - [4Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive)
-- [学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md)
+- [学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html)
   - [4.1Definition](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
-  - [定义](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E5%AE%9A%E4%B9%89)
+  - [定义](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E5%AE%9A%E4%B9%89)
   - [4.2Terminology](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
-  - [术语](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%9C%AF%E8%AF%AD)
+  - [术语](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%9C%AF%E8%AF%AD)
   - [4.3Novelty and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
-  - [新奇和压力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%96%B0%E5%A5%87%E5%92%8C%E5%8E%8B%E5%8A%9B)
+  - [新奇和压力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%96%B0%E5%A5%87%E5%92%8C%E5%8E%8B%E5%8A%9B)
   - [4.4Suppression of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
-  - [学习内驱力的抑制因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
+  - [学习内驱力的抑制因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
   - [4.5Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
-  - [拓展阅读](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB)
+  - [拓展阅读](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB)
   - [4.6Summary: Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
-  - [摘要：学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%91%98%E8%A6%81%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  - [摘要：学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%91%98%E8%A6%81%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
 - [5Effect of schooling on the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Effect_of_schooling_on_the_learn_drive)
-- [学校教育对学习内驱力的影响](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md)
+- [学校教育对学习内驱力的影响](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html)
   - [5.1Learn drive vs. age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
-  - [学习内驱力与年龄](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%B9%B4%E9%BE%84)
+  - [学习内驱力与年龄](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%B9%B4%E9%BE%84)
   - [5.2Learn drive vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
-  - [学习内驱力与知识](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E7%9F%A5%E8%AF%86)
+  - [学习内驱力与知识](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E7%9F%A5%E8%AF%86)
   - [5.3Learn drive vs. learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
-  - [学习内驱力与学习](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%AD%A6%E4%B9%A0)
+  - [学习内驱力与学习](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%AD%A6%E4%B9%A0)
   - [5.4Teacher problem](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
-  - [老师的困境](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E8%80%81%E5%B8%88%E7%9A%84%E5%9B%B0%E5%A2%83)
+  - [老师的困境](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E8%80%81%E5%B8%88%E7%9A%84%E5%9B%B0%E5%A2%83)
   - [5.5Learn drive distortions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
-  - [学习内驱力扭曲](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E6%89%AD%E6%9B%B2)
+  - [学习内驱力扭曲](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E6%89%AD%E6%9B%B2)
   - [5.6School enthusiasm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
-  - [上学热情](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E4%B8%8A%E5%AD%A6%E7%83%AD%E6%83%85)
+  - [上学热情](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E4%B8%8A%E5%AD%A6%E7%83%AD%E6%83%85)
   - [5.7Powering learn drive with SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Powering_learn_drive_with_SuperMemo)
-  - [用 SuperMemo 加强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E7%94%A8-supermemo-%E5%8A%A0%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  - [用 SuperMemo 加强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E7%94%A8-supermemo-%E5%8A%A0%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     - [5.7.1Enhancing the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
-    - [增强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E5%A2%9E%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    - [增强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%A2%9E%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     - [5.7.2Stunting the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
-    - [阻碍学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E9%98%BB%E7%A2%8D%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    - [阻碍学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E9%98%BB%E7%A2%8D%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     - [5.7.3Learn drive at middle age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
-    - [中年时期的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E4%B8%AD%E5%B9%B4%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    - [中年时期的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E4%B8%AD%E5%B9%B4%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
   - [5.8Perpetual learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
-  - [永恒的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E6%B0%B8%E6%81%92%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  - [永恒的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E6%B0%B8%E6%81%92%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
   - [5.9Summary: Changes to the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
-  - [摘要：改变学习内驱力的因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.md#%E6%91%98%E8%A6%81%E6%94%B9%E5%8F%98%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%9B%A0%E7%B4%A0)
+  - [摘要：改变学习内驱力的因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E6%91%98%E8%A6%81%E6%94%B9%E5%8F%98%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%9B%A0%E7%B4%A0)
 - [6Learn drive and reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_reward)
 - 学习内驱力和奖励
   - [6.1The main problem in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_main_problem_in_education)
@@ -561,10 +561,10 @@
   - [21.4Parody of the future](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Parody_of_the_future)
   - 未来的拙劣模仿
 - [22Glossary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Glossary)
-- [术语表](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/22.Glossary%E6%9C%AF%E8%AF%AD%E8%A1%A8.md)
+- [术语表](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/22.Glossary%E6%9C%AF%E8%AF%AD%E8%A1%A8.html)
 - [23References](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#References)
 - 参考文献
 - [24Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading_2)
-- [拓展阅读](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/24.Further%20reading%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB.md)
+- [拓展阅读](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/24.Further%20reading%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB.html)
 - [25Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary)
-- [摘要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/25.Summary%E6%91%98%E8%A6%81.md)
+- [摘要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/25.Summary%E6%91%98%E8%A6%81.html)
