第14章初步润色

--- a/I would never send my kids to school我永远不会送我的孩子去学校/04.Learn drive学习内驱力.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/04.Learn drive学习内驱力.md
@@ -142,5 +142,5 @@ For a good discussion of curiosity theories, see:
 - learn drive does not need to decline with age, it can be sustained till the end of a healthy lifespan
 - 学习内驱力不随着年龄的增长而衰退，它可以持续到健康的寿命结束
 - best enhancer of the learn drive is rich learning
-- 学习内驱力的最佳增强方法是饱满的学习
+- 学习内驱力的最佳增强方法是丰富的学习
 
