补充第14章遗漏

--- a/I would never send my kids to school我永远不会送我的孩子去学校/14.Baby management婴儿管理.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/14.Baby management婴儿管理.md
@@ -18,6 +18,10 @@ It is true that the brain proceeds with explosive development in the first years
 
 确实，大脑在生命的最初几年里会爆发性地发展。但发展不一定需要等同于学习。有时它只是简单的增长和结构改造。然而，我们最好始终记住发展是由早期经验指导的。早期的经验塑造了大脑「人格」的特征、程序能力、模式识别、技能和其他方面。在确保接触经验时，将儿童大脑视为学习机器是很好的。有时我们称之为刺激。刺激是好的，只要我们不忘记过度刺激也是可能的。例如，夜晚是睡眠的时间，而不是刺激的时间。对一种刺激感到疲倦的大脑，在刺激变化时或从刺激中得到休息时，会表现得更好。有一个最佳的刺激接触，有一个非常简单的策略，以确保孩子获得所需的刺激：让孩子自己决定！所有父母需要做的是提供必要的自由并遵循自然的渴望。
 
+> All the child needs for healthy development is access to rich environments and freedom to navigate those environments
+>
+> 儿童健康发展所需要的一切是进入丰富的环境和自由浏览这些环境
+
 ## 14.2 Micromanaging baby development
 
 ## 微观管理婴儿发育
