第14章初步润色

--- a/I would never send my kids to school我永远不会送我的孩子去学校/14.Baby management婴儿管理.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/14.Baby management婴儿管理.md
@@ -48,7 +48,7 @@ At toddlerhood, the list of restrictions and baby-proofing keeps increasing. All
 
 The old-and-tried approach to food allergies is to "eliminate". Instead of a safe natural exposure, an increasing proportion of kids is fed on **designer diets that have limited natural nutritional value** and an increasingly dangerous foreign chemical content.
 
-对食物过敏的老办法是「消除」。与安全的自然接触不同，越来越多的孩子吃的是**设计师设计的食物，这些食物的自然营养价值有限**，而且含有越来越危险的外来化学物质。
+对食物过敏的老办法是「消除」与安全的自然接触不同，越来越多的孩子吃的是**设计师设计的食物，这些食物的自然营养价值有限**，而且含有越来越危险的外来化学物质。
 
 The list of restrictions in exercise and exposure is endless. We deprive kids of the benefits of barefoot training by an array of heavy boots. We limit finger and palm movements by the shackles of fingerless mittens. We lock kids in high-chairs to make feeding easy. We prevent efficient **thermogenesis** with layers of clothing, hats, quadruple blankets, and bath thermometers. Instead, we engage in on-demand training that fits our convenience.
 
